--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
         <input name="year" type="text" class="year" id="year" placeholder="YYYY">
         <!-- Error messages -->
         <p class="required vis-hidden" id="required-day">This field is required</p>
+        <p class="incorrect hidden" id="incorrect-day">Must be a Valid day</p>
         <p class="required vis-hidden" id="required-month">This field is required</p>
+        <p class="incorrect hidden" id="incorrect-month">Must be a Valid month</p>
         <p class="required vis-hidden" id="required-year">This field is required</p>
-
-        <p class="incorrect hidden">Must be a Valid day</p>
-        <p class="incorrect hidden">Must be a Valid month</p>
-        <p class="incorrect hidden">Must be in the past</p>
+        <p class="incorrect hidden" id="incorrect-year">Must be in the past</p>
       </form>
       <!-- DIVISION -->
       <div class="line-button">
